# effects-benchmark

./: .gitignore  README.md  RESULTS.md  cabal.project  effects-benchmark.cabal  flake.nix
app/: Common.hs  Main.hs
app/ES/Bluefin/: Main.hs  Target.hs
app/ES/Effectful/: Main.hs  Target.hs
app/ES/FusedEffects/: Main.hs  Target.hs
app/ES/IO/: Main.hs  Target.hs
app/ES/Mtl/: Main.hs  Target.hs
app/ES/Polysemy/: Main.hs  Target.hs
